[gd_scene load_steps=16 format=3 uid="uid://b873fs2lbtp6t"]

[ext_resource type="Script" path="res://lib/scenes/main_ui.gd" id="1_ghhs3"]
[ext_resource type="FontFile" uid="uid://cave61j52xeuh" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="1_ni5mw"]
[ext_resource type="Script" path="res://addons/fontawesome/FontAwesome.gd" id="2_ur2r2"]
[ext_resource type="Script" path="res://addons/fontawesome/FontAwesomeButton.gd" id="5_utbrf"]
[ext_resource type="StyleBox" uid="uid://47euwrbfa4s2" path="res://assets/styles/info_label.tres" id="6_2hh53"]
[ext_resource type="Shader" path="res://assets/shaders/blur.gdshader" id="7_4jbex"]
[ext_resource type="PackedScene" uid="uid://r3fibn5pmeaq" path="res://scenes/ui/tool_panel.tscn" id="8_qxtma"]
[ext_resource type="Texture2D" uid="uid://cchdrpgcvbdw2" path="res://assets/textures/compass.png" id="9_sflov"]
[ext_resource type="StyleBox" uid="uid://1y3d708ad6uj" path="res://assets/styles/square_button.tres" id="9_uk6oi"]
[ext_resource type="StyleBox" uid="uid://cfbg1xb3p382n" path="res://assets/styles/square_button_hover.tres" id="10_my1vo"]
[ext_resource type="Texture2D" uid="uid://cw8xc1ad8lbdr" path="res://assets/textures/controllers/buttons/keyboard/menu.png" id="10_pjl1y"]
[ext_resource type="Texture2D" uid="uid://d38v6t3jpc62s" path="res://assets/textures/white.png" id="12_qnr10"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f6dah"]
shader = ExtResource("7_4jbex")
shader_parameter/amount = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmmbd"]
bg_color = Color(0.188235, 0.639216, 0.901961, 0.501961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wioo7"]
bg_color = Color(0, 0, 0, 0.478431)

[node name="MainUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ghhs3")

[node name="Blur" type="TextureRect" parent="."]
process_mode = 4
material = SubResource("ShaderMaterial_f6dah")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_qnr10")
expand_mode = 1

[node name="LabelSaving" type="Label" parent="."]
process_mode = 4
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_ni5mw")
theme_override_font_sizes/font_size = 48
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_ur2r2")
icon_size = 48
icon_name = "download"

[node name="Timer" type="Timer" parent="LabelSaving"]
process_mode = 3
wait_time = 0.5
one_shot = true

[node name="HUD" type="Control" parent="."]
process_mode = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelNotification" type="Label" parent="HUD"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.5
offset_right = 46.5
offset_bottom = 50.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("6_2hh53")
text = "Notif"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="HUD/LabelNotification"]
process_mode = 1
wait_time = 5.0
one_shot = true

[node name="MenuOpen" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LabelInfo" type="Label" parent="HUD"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -73.5
offset_top = -50.0
offset_right = 73.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("6_2hh53")
text = "Infos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="HUD/LabelInfo"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -18.0
offset_right = 70.0
offset_bottom = 19.0
grow_vertical = 2

[node name="PanelTool" parent="HUD" instance=ExtResource("8_qxtma")]
layout_mode = 1

[node name="Oxygen" type="ProgressBar" parent="HUD"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -155.0
offset_right = 171.0
offset_bottom = -125.0
grow_vertical = 0
rotation = -1.5708
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_qmmbd")
value = 50.0
show_percentage = false

[node name="FontAwesome" type="Label" parent="HUD/Oxygen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 75.5
offset_right = 105.5
offset_bottom = 24.0
grow_horizontal = 2
rotation = 1.5708
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("1_ni5mw")
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_ur2r2")
icon_name = "lungs"

[node name="Compass" type="TextureRect" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -107.0
offset_bottom = 106.0
grow_horizontal = 0
pivot_offset = Vector2(53, 53)
texture = ExtResource("9_sflov")
expand_mode = 2
stretch_mode = 4

[node name="MenuClose" type="TextureRect" parent="."]
process_mode = 4
layout_mode = 1
offset_left = 1.0
offset_right = 41.0
offset_bottom = 40.0
size_flags_horizontal = 0
texture = ExtResource("10_pjl1y")

[node name="Menu" type="VBoxContainer" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -98.0
offset_right = 240.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="MainMenu" type="HBoxContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/separation = 96
alignment = 1

[node name="ButtonInventory" type="Button" parent="Menu/MainMenu"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
localize_numeral_system = false
focus_neighbor_bottom = NodePath("../../SubMenu/ButtonSave")
focus_next = NodePath("../../SubMenu/ButtonSave")
focus_previous = NodePath("../../SubMenu/ButtonQuit")
theme_override_fonts/font = ExtResource("1_ni5mw")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("9_uk6oi")
theme_override_styles/hover = ExtResource("10_my1vo")
theme_override_styles/pressed = ExtResource("10_my1vo")
theme_override_styles/disabled = ExtResource("9_uk6oi")
theme_override_styles/focus = ExtResource("10_my1vo")
text = ""
icon_alignment = 1
vertical_icon_alignment = 2
script = ExtResource("5_utbrf")
icon_size = 40
icon_name = "toolbox"

[node name="SubMenu" type="HBoxContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ButtonSave" type="Button" parent="Menu/SubMenu"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
localize_numeral_system = false
focus_neighbor_left = NodePath("../ButtonQuit")
focus_neighbor_top = NodePath("../../MainMenu/ButtonInventory")
focus_neighbor_right = NodePath("../ButtonLoad")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../ButtonLoad")
focus_previous = NodePath("../../MainMenu/ButtonInventory")
theme_override_fonts/font = ExtResource("1_ni5mw")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("9_uk6oi")
theme_override_styles/hover = ExtResource("10_my1vo")
theme_override_styles/pressed = ExtResource("10_my1vo")
theme_override_styles/focus = ExtResource("10_my1vo")
text = ""
script = ExtResource("5_utbrf")
icon_size = 32
icon_name = "download"

[node name="ButtonLoad" type="Button" parent="Menu/SubMenu"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
localize_numeral_system = false
focus_neighbor_left = NodePath("../ButtonSave")
focus_neighbor_top = NodePath("../../MainMenu/ButtonInventory")
focus_neighbor_right = NodePath("../ButtonSettings")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../ButtonSettings")
focus_previous = NodePath("../ButtonSave")
theme_override_fonts/font = ExtResource("1_ni5mw")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("9_uk6oi")
theme_override_styles/hover = ExtResource("10_my1vo")
theme_override_styles/pressed = ExtResource("10_my1vo")
theme_override_styles/focus = ExtResource("10_my1vo")
text = ""
script = ExtResource("5_utbrf")
icon_size = 32
icon_name = "upload"

[node name="ButtonSettings" type="Button" parent="Menu/SubMenu"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
localize_numeral_system = false
focus_neighbor_left = NodePath("../ButtonLoad")
focus_neighbor_top = NodePath("../../MainMenu/ButtonInventory")
focus_neighbor_right = NodePath("../ButtonKeymaps")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../ButtonKeymaps")
focus_previous = NodePath("../ButtonLoad")
theme_override_fonts/font = ExtResource("1_ni5mw")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("9_uk6oi")
theme_override_styles/hover = ExtResource("10_my1vo")
theme_override_styles/pressed = ExtResource("10_my1vo")
theme_override_styles/focus = ExtResource("10_my1vo")
text = ""
script = ExtResource("5_utbrf")
icon_size = 32
icon_name = "sliders"

[node name="ButtonKeymaps" type="Button" parent="Menu/SubMenu"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
localize_numeral_system = false
focus_neighbor_left = NodePath("../ButtonSettings")
focus_neighbor_right = NodePath("../ButtonQuit")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../ButtonQuit")
focus_previous = NodePath("../ButtonSettings")
theme_override_fonts/font = ExtResource("1_ni5mw")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("9_uk6oi")
theme_override_styles/hover = ExtResource("10_my1vo")
theme_override_styles/pressed = ExtResource("10_my1vo")
theme_override_styles/focus = ExtResource("10_my1vo")
text = ""
script = ExtResource("5_utbrf")
icon_size = 32
icon_name = "keyboard"

[node name="ButtonQuit" type="Button" parent="Menu/SubMenu"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
localize_numeral_system = false
focus_neighbor_left = NodePath("../ButtonKeymaps")
focus_neighbor_right = NodePath("../ButtonSave")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../MainMenu/ButtonInventory")
focus_previous = NodePath("../ButtonKeymaps")
theme_override_fonts/font = ExtResource("1_ni5mw")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("9_uk6oi")
theme_override_styles/hover = ExtResource("10_my1vo")
theme_override_styles/pressed = ExtResource("10_my1vo")
theme_override_styles/focus = ExtResource("10_my1vo")
text = ""
script = ExtResource("5_utbrf")
icon_size = 32
icon_name = "person-walking-arrow-right"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 109.0
offset_right = 198.0
offset_bottom = 221.0
theme_override_styles/normal = SubResource("StyleBoxFlat_wioo7")
text = "QUIT"

[connection signal="timeout" from="LabelSaving/Timer" to="." method="_on_saving_timer_timeout"]
[connection signal="timeout" from="HUD/LabelNotification/Timer" to="." method="_on_timer_notif_timeout"]
[connection signal="pressed" from="Menu/MainMenu/ButtonInventory" to="." method="inventory_open"]
[connection signal="pressed" from="Menu/SubMenu/ButtonSave" to="." method="savegame_open"]
[connection signal="pressed" from="Menu/SubMenu/ButtonLoad" to="." method="load_savegame_open"]
[connection signal="pressed" from="Menu/SubMenu/ButtonSettings" to="." method="settings_open"]
[connection signal="pressed" from="Menu/SubMenu/ButtonKeymaps" to="." method="display_keymaps"]
[connection signal="pressed" from="Menu/SubMenu/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
